<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:focusable="true"
    android:clickable="true"
    android:contentDescription="@string/tarjeta_de_reserva"
    android:foreground="?android:attr/selectableItemBackground">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imagenInstalacion"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/imagen_de_la_instalaci_n"
                android:background="@drawable/rounded_image"
                android:clipToOutline="true"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/detalle_reserva"
                android:focusable="true"
                android:importantForAccessibility="yes"
                android:orientation="vertical"
                android:padding="8dp"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/nombreInstalacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/nombre_de_la_instalaci_n"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fechaReserva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/fecha_01_06_2024"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/horaReserva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/hora_16_00"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnCancelarReserva"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|top"
            android:layout_margin="8dp"
            android:background="@color/input"
            android:contentDescription="@string/cancelar_reserva"
            android:src="@drawable/baseline_delete_forever_24"
            tools:ignore="ImageContrastCheck" />
    </FrameLayout>
</androidx.cardview.widget.CardView>