<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_background"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.2"
            android:contentDescription="@string/logo_del_club_social_como_marca_de_agua"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_club_social"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/nombre_completo_del_socio"
            android:fontFamily="sans-serif-black"
            android:importantForAccessibility="yes"
            android:text="@string/nombre_completo"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageViewFoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:importantForAccessibility="yes"
            android:text="@string/socio"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textNombre"
            app:layout_constraintTop_toBottomOf="@+id/textNombre" />

        <TextView
            android:id="@+id/textNumeroSocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:importantForAccessibility="yes"
            android:text="@string/numero_socio"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="yes"
        android:text="@string/fecha_nacimiento"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textNumeroSocio"
        app:layout_constraintTop_toBottomOf="@+id/textNumeroSocio"
        app:layout_constraintVertical_bias="0.614" />

    <ImageView
        android:id="@+id/imageViewFoto"
        android:layout_width="163dp"
        android:layout_height="160dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_image"
        android:clipToOutline="true"
        android:contentDescription="@string/foto_del_socio"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textNombre"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageViewQrCode"
        android:layout_width="115dp"
        android:layout_height="108dp"
        android:contentDescription="@string/qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFoto"
        app:layout_constraintStart_toStartOf="@+id/imageViewFoto"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFoto"
        app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>