<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!-- Declare your ViewModel and other data bindings here -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/carnet"
            android:layout_width="0dp"
            android:layout_height="268dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background"
            android:contentDescription="@string/descripcion_carnet_socio"
            android:importantForAccessibility="yes"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck">

            <!-- Contenido del carnet (igual que antes) -->

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:alpha="0.2"
                android:contentDescription="@string/logo_del_club_social_como_marca_de_agua"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_club_social" />

            <TextView
                android:id="@+id/textNumeroSocio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="yes"
                android:text="@string/numero_socio"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/imageViewFoto"
                app:layout_constraintHorizontal_bias="0.008"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/socio"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:importantForAccessibility="yes"
                app:layout_constraintEnd_toStartOf="@+id/imageViewFoto"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNombre" />

            <TextView
                android:id="@+id/textNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/nombre_completo"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/nombre_completo_del_socio"
                app:layout_constraintEnd_toStartOf="@+id/imageViewFoto"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:importantForAccessibility="yes"
                android:text="@string/fecha_nacimiento"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageViewFoto"
                android:layout_width="94dp"
                android:layout_height="101dp"
                android:background="@drawable/rounded_image"
                android:clipToOutline="true"
                android:contentDescription="@string/foto_del_socio"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageViewQrCode"
                android:layout_width="91dp"
                android:layout_height="88dp"
                android:layout_marginTop="44dp"
                android:contentDescription="@string/qr_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.98"
                app:layout_constraintStart_toEndOf="@+id/textFechaNacimiento"
                app:layout_constraintTop_toBottomOf="@+id/imageViewFoto"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textEventoNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/tabl_n_de_anuncios"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carnet" />

        <TextView
            android:id="@+id/textFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/fecha_del_evento"
            android:textColor="#FBFBFB"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEventoNombre" />

        <!-- Contenedor de eventos con ScrollView -->
        <ScrollView
            android:id="@+id/eventosContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorBackground"
            android:contentDescription="@string/club_social_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFecha"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/eventosLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>