<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="75dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewFoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/foto_del_socio"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewFoto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Numero Socio -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/n_mero_socio"
                    android:src="@drawable/baseline_numbers_24" />

                <EditText
                    android:id="@+id/textNumeroSocio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:autofillHints=""
                    android:backgroundTint="@color/colorBackground"
                    android:enabled="false"
                    android:hint="@string/n_mero_de_socio"
                    android:minHeight="48dp"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray"
                    tools:ignore="TextFields,VisualLintTextFieldSize" />
            </LinearLayout>

            <!-- Nombre -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/nombre"
                    android:src="@drawable/baseline_person_24" />

                <EditText
                    android:id="@+id/textNombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:autofillHints=""
                    android:backgroundTint="@color/colorText"
                    android:hint="@string/tu_nombre"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@android:color/darker_gray"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <!-- Apellidos -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/apellidos"
                    android:src="@drawable/baseline_person_24" />

                <EditText
                    android:id="@+id/textApellidos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:autofillHints=""
                    android:backgroundTint="@color/colorText"
                    android:hint="@string/tus_apellidos"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@android:color/darker_gray"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <!-- Teléfono -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/tel_fono"
                    android:src="@drawable/baseline_phone_24" />

                <EditText
                    android:id="@+id/textTelefono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:autofillHints="phone"
                    android:backgroundTint="@color/colorText"
                    android:hint="@string/tu_tel_fono"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@android:color/darker_gray"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <!-- DNI -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/dni"
                    android:src="@drawable/baseline_badge_24" />

                <EditText
                    android:id="@+id/textDni"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:backgroundTint="@color/colorText"
                    android:hint="@string/tu_dni"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@android:color/darker_gray"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/email"
                    android:src="@drawable/baseline_email_24" />

                <EditText
                    android:id="@+id/textEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:autofillHints="emailAddress"
                    android:backgroundTint="@color/colorText"
                    android:hint="@string/tu_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@android:color/darker_gray"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <!-- Fecha Nacimiento -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/f_nacimiento"
                    android:src="@drawable/baseline_today_24" />

                <EditText
                    android:id="@+id/textFechaNacimiento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:backgroundTint="@color/colorText"
                    android:hint="@string/yyyy_mm_dd"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@android:color/darker_gray"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <!-- Contraseña -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/contrase_a"
                    android:src="@drawable/baseline_lock_24" />

                <EditText
                    android:id="@+id/textContrasenia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:autofillHints="password"
                    android:backgroundTint="@color/colorText"
                    android:hint="@string/tu_contrase_a"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@android:color/darker_gray"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>

            <!-- Botón guardar -->
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_background"
                android:drawableStart="@drawable/baseline_save_24"
                android:drawablePadding="16dp"
                android:gravity="center"
                android:minWidth="200dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/guardar_cambios"
                android:textAllCaps="true"
                android:textColor="@color/colorText" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>